# fire_alert_backend

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  main.py  pyproject.toml  railway.json  render.yaml
app/: auth.py  database.py  models.py  schemas.py  seed.py
app/routers/: admin.py  health.py  home.py  reports.py  users.py
tests/: conftest.py  test_health.py  test_reports.py  test_users.py
